--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Imports: dplyr,
+  pbapply,
+  parallel,
   glmnet,
   purrr,
   SuperLearner
