--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,10 @@ Imports: dplyr,
   pbapply,
   parallel,
   glmnet,
+  gbm,
   purrr,
-  SuperLearner
+  SuperLearner,
+  ranger
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
