--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,28 @@
 Package: crossurr
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Cross-fitting for doubly robust evaluation of high-dimensional surrogate markers 
+Version: 0.9.9999
+Authors@R: c(person("Denis", "Agniel", role = c("aut", "cre"),
+                    email = "denis.agniel@gmail.com"),
+	           person("Boris P.", "Hejblum", role = c("aut"),
+	                  email = "boris.hejblum@u-bordeaux.fr")
+	         )
+Description: Method is detailed in: Agniel D, Hejblum BP, Thiebaut R & Parast L (2022). 
+             "Doubly robust evaluation of high-dimensional surrogate markers", Biostatistics <doi:10.1093/biostatistics/kxac020>.
+License: MIT + file LICENSE
+Depends: R (>= 3.6.0)
 Imports: dplyr,
-  pbapply,
-  parallel,
-  glmnet,
   gbm,
+  glmnet,
+  glue,
+  parallel,
+  pbapply,
   purrr,
-  SuperLearner,
-  ranger
+  ranger,
+  RCAL,
+  rlang,
+  SIS,
+  stats,
+  SuperLearner
 Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.1
