--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,26 @@
 
 export(xf_surrogate)
 export(xfr_surrogate)
+import(dplyr)
+import(gbm)
+import(parallel)
+import(ranger)
+import(rlang)
+importFrom(RCAL,ate.regu.cv)
+importFrom(SIS,SIS)
+importFrom(glmnet,cv.glmnet)
+importFrom(glmnet,predict.glmnet)
+importFrom(glue,glue)
 importFrom(purrr,map)
+importFrom(purrr,map_df)
+importFrom(stats,as.formula)
+importFrom(stats,binomial)
+importFrom(stats,gaussian)
+importFrom(stats,glm)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,rbeta)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
