--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ import(ranger)
 import(rlang)
 importFrom(RCAL,ate.regu.cv)
 importFrom(SIS,SIS)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,predict.glmnet)
 importFrom(glue,glue)
@@ -25,3 +27,4 @@ importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
+importFrom(tibble,tibble)
