Import functions for examples.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(dplyr,pull)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,predict.glmnet)
 importFrom(glue,glue)
+importFrom(mvnfast,rmvn)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(stats,as.formula)
@@ -28,3 +29,4 @@ importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
+importFrom(tidyr,spread)
