--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(person("Denis", "Agniel", role = c("aut", "cre"),
 	           person("Boris P.", "Hejblum", role = c("aut"),
 	                  email = "boris.hejblum@u-bordeaux.fr"),
 	           person("Layla", "Parast", role = c("aut"),
-	                  email = "layla.parast@parast@austin.utexas.edu")
+	                  email = "parast@austin.utexas.edu")
 	         )
 Description: Doubly robust methods for evaluating surrogate markers as outlined in: Agniel D, Hejblum BP, Thiebaut R & Parast L (2022). 
              "Doubly robust evaluation of high-dimensional surrogate markers", Biostatistics <doi:10.1093/biostatistics/kxac020>. You can use these methods to determine how much of the overall treatment effect is explained by a (possibly high-dimensional) set of surrogate markers.
@@ -29,4 +29,4 @@ Imports: dplyr,
   tibble,
   tidyr
 Encoding: UTF-8
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.2
