--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: crossurr
 Type: Package
 Title: Cross-Fitting for Doubly Robust Evaluation of High-Dimensional Surrogate Markers 
-Version: 1.1.2
+Version: 1.1.3
 Authors@R: c(person("Denis", "Agniel", role = c("aut", "cre"),
                     email = "dagniel@rand.org"),
 	           person("Boris P.", "Hejblum", role = c("aut"),
@@ -30,3 +30,5 @@ Imports: dplyr,
   tidyr
 Encoding: UTF-8
 RoxygenNote: 7.3.2
+URL: https://github.com/denisagniel/crossurr
+BugReports: https://github.com/denisagniel/crossurr/issues
